# src/api/handlers/bulkTransfers/{id}/error.js
@@ -1,0 +1,68 @@
+/*****
+ License
+ --------------
+ Copyright © 2020 Bill & Melinda Gates Foundation
+ The Mojaloop files are made available by the Bill & Melinda Gates Foundation under the Apache License, Version 2.0 (the "License") and you may not use these files except in compliance with the License. You may obtain a copy of the License at
+
+ http://www.apache.org/licenses/LICENSE-2.0
+
+ Unless required by applicable law or agreed to in writing, the Mojaloop files are distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.
+
+ Contributors
+ --------------
+ This is the official list of the Mojaloop project contributors for this file.
+ Names of the original copyright holders (individuals or organizations)
+ should be listed with a '*' in the first column. People who have
+ contributed from an organization can be listed under the organization
+ that actually holds the copyright for their contributions (see the
+ Gates Foundation organization for an example). Those individuals should have
+ their names indented and be marked with a '-'. Email address can be added
+ optionally within square brackets <email>.
+
+ * Gates Foundation
+ - Name Surname <name.surname@gatesfoundation.com>
+
+ * ModusBox
+ - Steven Oderayi <steven.oderayi@modusbox.com>
+ --------------
+ ******/
+
+'use strict'
+
+const TransferService = require('../../../../domain/bulkTransfer')
+const Logger = require('@mojaloop/central-services-logger')
+const ErrorHandler = require('@mojaloop/central-services-error-handling')
+const Hash = require('@mojaloop/central-services-shared').Util.Hash
+const Uuid = require('uuid4')
+const HTTPENUM = require('@mojaloop/central-services-shared').Enum.Http
+
+/**
+ * Operations on /bulkTransfers/{id}/error
+ */
+module.exports = {
+  /**
+     * summary: putBulkTransferErrorById
+     * description: The callback PUT /bulkTransfers/&lt;id&gt;/error is used to inform the client of an error associated with a requested bulk transfer creation or status retrieval. The &lt;id&gt; in the URI should contain the bulkTransferId that was used for the creation request of the bulk transfer (POST /bulkTransfers), or the &lt;id&gt; that was used in the GET /bulkTransfers/&lt;id&gt;.
+     * parameters: id, body, Content-Length, Content-Type, Date, X-Forwarded-For, FSPIOP-Source, FSPIOP-Destination, FSPIOP-Encryption, FSPIOP-Signature, FSPIOP-URI, FSPIOP-HTTP-Method
+     * produces: application/json
+     * responses: default
+     */
+  put: async function putBulkTransferErrorById (request, h) {
+    try {
+      Logger.debug('error::payload(%s)', JSON.stringify(request.payload))
+
+      const bulkTransferId = request.params.id
+      const { errorInformation, extensionList } = request.payload
+      const hash = Hash.generateSha256(JSON.stringify(request.payload))
+      const messageId = Uuid()
+      const message = { bulkTransferId, errorInformation, extensionList, hash }
+
+      await TransferService.bulkTransferError(messageId, request.headers, message)
+
+      return h.response().code(HTTPENUM.ReturnCodes.ACCEPTED.CODE)
+    } catch (err) {
+      Logger.error(err)
+      throw ErrorHandler.Factory.reformatFSPIOPError(err)
+    }
+  }
+}
